<resources>
    <string name="app_name">Calligraphy Recognize</string>
    <string name="tv_app_name">书法风格识别</string>
    <string name="item_hot">书法识别</string>
    <string name="item_content">图像处理</string>
    <string name="item_setting">设置</string>
    <string name="request_permission">This APP needs camera permission.</string>
    <string name="camera_for_recognize">拍照识别</string>
    <string name="album_for_crop">从相册中选取</string>
    <string name="binProcess">二值化</string>
    <string name="edgeProcess">边缘提取</string>
    <string name="skeProcess">骨架化</string>
    <string name="selectPic">选择图片</string>
    <string name="result_character_recognize_error">抱歉，未识别出文字信息</string>
    <string name="result_character_recognize_width">文字宽高: </string>
    <string name="result_character_recognize_height">文字高度:  </string>
    <string name="result_character_recognize_x">文字坐标: </string>
    <string name="result_character_recognize_y">纵轴坐标: </string>
    <string name="result_character_cardView_word">识别结果: </string>
    <string name="result_character_cardView_width">文字宽度: </string>
    <string name="result_character_cardView_height">文字高度:  </string>
    <string name="result_character_cardView_style">书法风格: </string>
    <string name="result_character_cardView_cv">致信率: </string>
    <string name="title_activity_setting">设置</string>
    <string name="save_net_mode">1</string>
    <string name="result_character_style">使用Caffe深度学习框架识别出的书法风格：</string>
    <string name="fragment_main_select_tv_word">功能选择</string>
    <string name="skeProcess_java">Java方法的骨架化</string>
</resources>
